Schema swagger api doc
