# storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "API Documentation",
-        "description": "API documentation for my Laravel application",
+        "description": "API documentation for Mekanik Elektro application",
         "contact": {
             "email": "zikriramdani.developer@gmail.com"
         },
@@ -25,7 +25,7 @@
                                 "schema": {
                                     "type": "array",
                                     "items": {
-                                        "$ref": "#/components/schemas/AreaLayanan"
+                                        "$ref": "#/components/schemas/ServiceArea"
                                     }
                                 }
                             }
@@ -68,8 +68,8 @@
     },
     "components": {
         "schemas": {
-            "AreaLayanan": {
-                "title": "Area Layanan",
+            "ServiceArea": {
+                "title": "Service Area",
                 "required": [
                     "id",
                     "title"
@@ -102,7 +102,7 @@
                         "type": "integer"
                     },
                     "image": {
-                        "description": "Image of the banner",
+                        "description": "URL of the banner image",
                         "type": "string"
                     },
                     "title": {
@@ -114,11 +114,351 @@
                         "type": "string"
                     },
                     "title_wa": {
-                        "description": "Title Whatsapp of the banner",
+                        "description": "WhatsApp title",
                         "type": "string"
                     },
                     "link_wa": {
-                        "description": "Link Whatsapp of the banner",
+                        "description": "WhatsApp link",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "CallToAction": {
+                "title": "Call To Action",
+                "required": [
+                    "id",
+                    "title",
+                    "subtitle",
+                    "link_wa"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "ID of the call to action",
+                        "type": "integer"
+                    },
+                    "title": {
+                        "description": "Title of the call to action",
+                        "type": "string"
+                    },
+                    "subtitle": {
+                        "description": "Subtitle of the call to action",
+                        "type": "string"
+                    },
+                    "link_wa": {
+                        "description": "WhatsApp link for the call to action",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "FloatingWhatsapp": {
+                "title": "Floating Whatsapp",
+                "required": [
+                    "id",
+                    "avatar",
+                    "phone_number",
+                    "account_name",
+                    "chat_message",
+                    "status_message"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "ID of the floating WhatsApp",
+                        "type": "integer"
+                    },
+                    "avatar": {
+                        "description": "Avatar image URL for the floating WhatsApp",
+                        "type": "string",
+                        "format": "binary"
+                    },
+                    "phone_number": {
+                        "description": "Phone number for the WhatsApp account",
+                        "type": "string"
+                    },
+                    "account_name": {
+                        "description": "Name of the WhatsApp account",
+                        "type": "string"
+                    },
+                    "chat_message": {
+                        "description": "Default chat message to be sent",
+                        "type": "string"
+                    },
+                    "status_message": {
+                        "description": "Status message for the WhatsApp account",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "Gallery": {
+                "title": "Gallery",
+                "required": [
+                    "id",
+                    "title",
+                    "image",
+                    "width",
+                    "height",
+                    "alt",
+                    "tags",
+                    "description"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "ID of the Gallery",
+                        "type": "integer"
+                    },
+                    "title": {
+                        "description": "Title of the Gallery",
+                        "type": "string"
+                    },
+                    "image": {
+                        "description": "Image URL of the Gallery",
+                        "type": "string",
+                        "format": "binary"
+                    },
+                    "width": {
+                        "description": "Width of the image",
+                        "type": "integer"
+                    },
+                    "height": {
+                        "description": "Height of the image",
+                        "type": "integer"
+                    },
+                    "alt": {
+                        "description": "Alternative text for the image",
+                        "type": "string"
+                    },
+                    "tags": {
+                        "description": "Tags associated with the Gallery",
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    },
+                    "description": {
+                        "description": "Description of the Gallery",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "ContactUs": {
+                "title": "Contact Us",
+                "required": [
+                    "id",
+                    "title"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "ID of the Contact Us",
+                        "type": "integer"
+                    },
+                    "alamat": {
+                        "description": "Address",
+                        "type": "string"
+                    },
+                    "jam_kerja": {
+                        "description": "Working hours",
+                        "type": "string"
+                    },
+                    "no_telp": {
+                        "description": "Telephone number",
+                        "type": "string"
+                    },
+                    "no_wa": {
+                        "description": "WhatsApp number",
+                        "type": "string"
+                    },
+                    "link_no_wa": {
+                        "description": "WhatsApp link",
+                        "type": "string"
+                    },
+                    "email": {
+                        "description": "Email address",
+                        "type": "string"
+                    },
+                    "embed_google_map": {
+                        "description": "Google Map embed link",
+                        "type": "string"
+                    },
+                    "link_konfirmasi_wa": {
+                        "description": "WhatsApp confirmation link",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "Services": {
+                "title": "Services",
+                "required": [
+                    "id",
+                    "title"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "ID of the Services",
+                        "type": "integer"
+                    },
+                    "image": {
+                        "description": "URL of the service image",
+                        "type": "string"
+                    },
+                    "title": {
+                        "description": "Title of the service",
+                        "type": "string"
+                    },
+                    "alt": {
+                        "description": "Alt text for the service image",
+                        "type": "string"
+                    },
+                    "description": {
+                        "description": "Description of the service",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "Logo": {
+                "title": "Logo",
+                "required": [
+                    "id",
+                    "image",
+                    "alt"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "ID of the logo",
+                        "type": "integer"
+                    },
+                    "image": {
+                        "description": "URL of the logo image",
+                        "type": "string"
+                    },
+                    "alt": {
+                        "description": "Alt text for the logo image",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "ServiceNumber": {
+                "title": "Service Number",
+                "required": [
+                    "tahun_pengalaman",
+                    "description_pengalaman",
+                    "certification_description",
+                    "operasional_description",
+                    "harga_wajar_description"
+                ],
+                "properties": {
+                    "tahun_pengalaman": {
+                        "description": "Years of experience",
+                        "type": "string"
+                    },
+                    "description_pengalaman": {
+                        "description": "Description of experience",
+                        "type": "string"
+                    },
+                    "certification_description": {
+                        "description": "Certification description",
+                        "type": "string"
+                    },
+                    "operasional_description": {
+                        "description": "Operational description",
+                        "type": "string"
+                    },
+                    "harga_wajar_description": {
+                        "description": "Fair price description",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "Payment": {
+                "title": "Payment",
+                "required": [
+                    "image",
+                    "alt",
+                    "no_rek",
+                    "nama_rek",
+                    "nama_bank"
+                ],
+                "properties": {
+                    "image": {
+                        "description": "URL of the payment image",
+                        "type": "string"
+                    },
+                    "alt": {
+                        "description": "Alt text for the payment image",
+                        "type": "string"
+                    },
+                    "no_rek": {
+                        "description": "Bank account number",
+                        "type": "string"
+                    },
+                    "nama_rek": {
+                        "description": "Account holder's name",
+                        "type": "string"
+                    },
+                    "nama_bank": {
+                        "description": "Name of the bank",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "AboutUs": {
+                "title": "About Us",
+                "required": [
+                    "image",
+                    "alt",
+                    "description"
+                ],
+                "properties": {
+                    "image": {
+                        "description": "URL of the image",
+                        "type": "string"
+                    },
+                    "alt": {
+                        "description": "Alt text for the image",
+                        "type": "string"
+                    },
+                    "description": {
+                        "description": "Description about us",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "Testimonial": {
+                "title": "Testimonial",
+                "required": [
+                    "image",
+                    "alt",
+                    "name",
+                    "position",
+                    "description"
+                ],
+                "properties": {
+                    "image": {
+                        "description": "URL of the testimonial image",
+                        "type": "string"
+                    },
+                    "alt": {
+                        "description": "Alt text for the testimonial image",
+                        "type": "string"
+                    },
+                    "name": {
+                        "description": "Name of the person giving the testimonial",
+                        "type": "string"
+                    },
+                    "position": {
+                        "description": "Position or title of the person",
+                        "type": "string"
+                    },
+                    "description": {
+                        "description": "Testimonial description or message",
                         "type": "string"
                     }
                 },
